--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -99,8 +99,6 @@ fra:
       # show: "Show backend/cells/demo pie cell"
     backend/cells/expense_chart_cells:
       # show: "Show backend/cells/expense chart cell"
-    backend/cells/last_events_cells:
-      # show: "Show backend/cells/last events cell"
     backend/cells/last_milk_result_cells:
       # show: "Show backend/cells/last milk result cell"
     backend/cells/last_procedures_cells:
@@ -621,7 +619,6 @@ fra:
     # backend/cells/demo_map_cells: "Backend/cells/demo map cells"
     # backend/cells/demo_pie_cells: "Backend/cells/demo pie cells"
     # backend/cells/expense_chart_cells: "Backend/cells/expense chart cells"
-    # backend/cells/last_events_cells: "Backend/cells/last events cells"
     # backend/cells/last_milk_result_cells: "Backend/cells/last milk result cells"
     # backend/cells/last_procedures_cells: "Backend/cells/last procedures cells"
     # backend/cells/last_products_cells: "Backend/cells/last products cells"
@@ -769,7 +766,6 @@ fra:
       journal_entry_items: "Écritures"
     account_tangible_fixed_assets: "Immobilisations corporelles"
     account_untangible_fixed_assets: "Immobilisations incorporelles"
-    account_update: "Modifier le compte"
     account_value_current: "Brut"
     account_value_previous: "Brut N-1"
     accountancy: "Comptabilité"
@@ -867,8 +863,7 @@ fra:
         safari: "Safari"
     balance: "Solde"
     bank_chart: "Évolution du solde de banque"
-    bank_statement_point: "Pointer le relevé"
-    bank_statement_update: "Modifier le relevé"
+    bban: "Relevé d'identité bancaire (RIB)"
     beginning: "Début"
     begins: "Commence par"
     body: "Corps du message"
@@ -887,7 +882,6 @@ fra:
     cash_tabbox:
       bank_statements: "Relevés de compte"
       deposits: "Remises en banque"
-    cash_update: "Modifier la trésorerie"
     catalog: "Description pour catalogue"
     category: "Catégorie"
     category_name: "Catégorie"
@@ -954,7 +948,6 @@ fra:
     currency_with_code: "%{code} - %{name}"
     current: "En cours"
     current_letter: "Lettre en cours\_: %{letter}"
-    custom_field_update: "Modifier le champ personnalisé"
     data_to_export: "Données à exporter"
     data_to_extract: "Données à extraire"
     dates: "Saisissez les dates de début et de fin de la période"
@@ -962,8 +955,7 @@ fra:
     decimal_case: "Options pour un décimal"
     decimal_options: "Indicateur de type décimal"
     default_subject: "[%{company}]"
-    delay: "Délais"
-    delay_update: "Modifier le délai"
+    delay: "Délai"
     delete: "Supprimer"
     deliver: "Valider l’envoi des livraisons"
     deliveries: "Livraisons"
@@ -975,7 +967,6 @@ fra:
     demo_pie: "Ventes par type de produit"
     departments: "Services"
     deposit: "Remise en banque"
-    deposit_update: "Modifier la remise en banque"
     depositable: "Complément d’information"
     depreciation: "Ammortissement"
     description: "Description"
@@ -1008,11 +999,8 @@ fra:
     entities_import: "Importer un fichier CSV"
     entities_merge: "Fusionner des fiches"
     entity: "Personne"
-    entity_category_update: "Modifier la catégorie de fiche"
-    entity_print: "Imprimer la fiche"
     entity_to_delete: "Doublon à fusionner (et faire disparaitre)"
     entity_to_update: "Fiche à mettre à jour avec les éléments du doublon"
-    entity_update: "Modifier la fiche"
     entries: "Écritures"
     entries_to_point: "Écritures à pointer"
     error_no_file: "Aucune aide n’est disponible pour cette partie de l’application (%{article}). L’aide n’a pas encore été rédigée. Vous pouvez consulter le site en ligne pour plus d’informations."
@@ -1079,8 +1067,6 @@ fra:
     include_blank: "— Aucune organisation —"
     income_statement: "Comptes de résultats"
     incoming_payment_conditions: "Conditions d’encaissement"
-    incoming_payment_update: "Modifier l’encaissement"
-    incoming_payment_use_create: "Affecter un encaissement"
     incoming_payments: "Encaissements"
     incoming_payments_states:
       all: "Tous"
@@ -1109,15 +1095,12 @@ fra:
     journal_entries: "Écritures"
     journal_entries_states: "États des écritures utilisées"
     journal_name: "%{name}"
-    journal_record_update: "Modifier la pièce"
-    journal_update: "Modifier le journal"
     journal_view:
       entries: "Écritures"
       items: "Lignes d’écritures"
       mixed: "Écritures et lignes"
     journals: "Journaux"
     land_parcel_name: "Parcelle"
-    land_parcel_update: "Modifier la parcelle"
     land_parcels: "Parcellaire"
     last_animals: "Dernières naissances"
     last_clients: "Derniers clients"
@@ -1282,8 +1265,6 @@ fra:
     on_account: "À remettre sur le compte"
     one_condition: "au moins une condition"
     operation_items: "Intrants et sortants"
-    operation_update: "Modifier le travail"
-    operation_use_create: "Ajouter un matériel"
     operations: "Travaux"
     order: "Commande"
     order_amount_with_taxes: "Montant de la commande"
@@ -1294,8 +1275,6 @@ fra:
     others_not_assessable_operations: "Autres opérations non imposables"
     others_services: "Autres biens et services"
     out_vat_amount: "Base hors taxe"
-    outgoing_payment_update: "Modifier le décaissement"
-    outgoing_payment_use_create: "Payer l’achat"
     outgoing_payments_states:
       all: "Tous"
       undelivered: "Non délivrés"
@@ -1319,8 +1298,7 @@ fra:
     payment_label: "%{number}. %{amount} (%{usable_amount} restants) du %{date} par %{mode} de %{entity}"
     payment_mode: "Mode d’encaissement"
     payment_on: "Payé le"
-    payment_uses: "Décaissements"
-    payments: "Encaissements"
+    payments: "Réglements"
     payments_amount: "Montant réglé"
     payments_count: "Nombre de %{mode}"
     payments_number: "Nombre de règlements"
@@ -1359,11 +1337,9 @@ fra:
     product: "Produit"
     product_bar: "Produit par catégories"
     product_category: "Produits"
-    product_category_update: "Modifier la catégorie"
     product_name: "Produit"
     product_price_listings: "Listes de prix"
     product_price_templates: "Types de prix"
-    product_update: "Modifier la fiche du produit"
     production: "Gestion de la production"
     productions: "Productions"
     productions_states:
@@ -1384,11 +1360,9 @@ fra:
       deliveries: "Livraisons"
       products: "Création de l’achat"
       summary: "Décaissements"
-    purchase_update: "Modifier les informations de la commande"
     purchases: "Achats"
     purchases_bar: "Achats par type"
     purchases_expense_bar: "Dépenses par mois"
-    purchases_price_create: "Ajouter un prix d’achat"
     quantity: "Quantité"
     quantity_rest: "Quantité restante"
     quantity_to_credit: "Qté. à passer en avoir"
@@ -1439,7 +1413,6 @@ fra:
     sale: "Vente"
     sale_cancel: "Faire un avoir sur la facture"
     sale_deliveries: "Livraisons"
-    sale_item_create: "Ajouter un produit au devis (Mode complet)"
     sale_items: "Lignes de la vente"
     sale_steps:
       deliveries: "Planification des livraisons"
@@ -1447,7 +1420,6 @@ fra:
       general: "Description"
       products: "Produits"
       summary: "Facture et encaissements"
-    sale_update: "Modifier les informations du devis"
     sales: "Ventes"
     sales_conditions: "Conditions de vente"
     sales_invoice: "Facture"
@@ -1461,7 +1433,6 @@ fra:
       cancelled: "Passées en avoir"
       credits: "Avoirs"
     sales_invoices_total: "Total factures"
-    sales_price_create: "Ajouter un prix de vente"
     sales_states:
       all: "Toutes"
       current: "En cours"
@@ -1539,7 +1510,6 @@ fra:
     to_deliver: "Livrer"
     to_deposit: "À encaisser"
     today: "Aujourd’hui"
-    tool_update: "Modifier le matériel"
     tools: "Outils"
     tools_list: "Liste d’outils"
     total: "Total"
@@ -1730,7 +1700,7 @@ fra:
     bookkeeping_is_finished: "La bascule en comptabilité est finie."
     bookkeeping_works_only_with: "La bascule en comptabilité ne peut se faire actuellement que pour\_: %{list}."
     cannot_delete_entity: "Il n’est pas possible de supprimer cette fiche car elle possède un historique comptable" #?
-    cannot_find_document_template: "Impossible de trouver le modèle de document"
+    cannot_find_document_template: "Impossible de trouver le modèle de document" #?
     cannot_mark_entry_items: "Impossible de lettrer ces lignes d’écritures ensemble"
     cannot_merge_an_entity_with_itself: "Il n’est pas possible de fusionner une fiche avec elle-même"
     cannot_merge_entities: "Une erreur est survenue. Il n’est pas possible de fusionner ces fiches."
@@ -1794,7 +1764,7 @@ fra:
     no_unvalidated_operations: "Aucun travail à réaliser"
     password_successfully_changed: "Votre mot de passe a été mis à jour avec succès"
     prices_import_succeeded: "Vos données ont été correctement importées"
-    print_failure: "Impossible d’imprimer. Essayer de recharger les modèles de documents pour corriger le problème. %{error} (%{class})."
+    print_failure: "Impossible d’imprimer. Essayer de recharger les modèles de documents pour corriger le problème. %{error} (%{class})." #?
     purchase_already_invoiced: "Achat déjà facturé"
     record_cannot_be_removed: "L’enregistrement ne peut pas être supprimé"
     record_has_been_correctly_removed: "L’enregistrement a été supprimé correctement"
