--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -442,7 +442,7 @@ jpn:
       # edit: "Modifier un produit"
       # index: "Produits"
       # new: "Créer un produit"
-      # show: "Produit\_: %{name}"
+      # show: "%{nature_name}\_: %{name}"
     backend/professions:
       # edit: "Modifier la profession\_: %{name}"
       # index: "Professions"
@@ -674,7 +674,6 @@ jpn:
       # journal_entry_items: "Écritures"
     # account_tangible_fixed_assets: "Immobilisations corporelles"
     # account_untangible_fixed_assets: "Immobilisations incorporelles"
-    # account_update: "Modifier le compte"
     # account_value_current: "Brut"
     # account_value_previous: "Brut N-1"
     # accountancy: "Comptabilité"
@@ -772,8 +771,7 @@ jpn:
         # safari: "Safari"
     # balance: "Solde"
     # bank_chart: "Évolution du solde de banque"
-    # bank_statement_point: "Pointer le relevé"
-    # bank_statement_update: "Modifier le relevé"
+    # bban: "Relevé d'identité bancaire (RIB)"
     # beginning: "Début"
     # begins: "Commence par"
     # body: "Corps du message"
@@ -792,7 +790,6 @@ jpn:
     cash_tabbox:
       # bank_statements: "Relevés de compte"
       # deposits: "Remises en banque"
-    # cash_update: "Modifier la trésorerie"
     # catalog: "Description pour catalogue"
     # category: "Catégorie"
     # category_name: "Catégorie"
@@ -859,7 +856,6 @@ jpn:
     # currency_with_code: "%{code} - %{name}"
     # current: "En cours"
     # current_letter: "Lettre en cours\_: %{letter}"
-    # custom_field_update: "Modifier le champ personnalisé"
     # data_to_export: "Données à exporter"
     # data_to_extract: "Données à extraire"
     # dates: "Saisissez les dates de début et de fin de la période"
@@ -867,8 +863,7 @@ jpn:
     # decimal_case: "Options pour un décimal"
     # decimal_options: "Indicateur de type décimal"
     # default_subject: "[%{company}]"
-    # delay: "Délais"
-    # delay_update: "Modifier le délai"
+    # delay: "Délai"
     # delete: "Supprimer"
     # deliver: "Valider l’envoi des livraisons"
     # deliveries: "Livraisons"
@@ -881,7 +876,6 @@ jpn:
     # departments: "Services"
     # deposit: "Remise en banque"
     deposit_create: #?
-    # deposit_update: "Modifier la remise en banque"
     # depositable: "Complément d’information"
     # depreciation: "Ammortissement"
     # description: "Description"
@@ -914,11 +908,8 @@ jpn:
     # entities_import: "Importer un fichier CSV"
     # entities_merge: "Fusionner des fiches"
     # entity: "Personne"
-    # entity_category_update: "Modifier la catégorie de fiche"
-    # entity_print: "Imprimer la fiche"
     # entity_to_delete: "Doublon à fusionner (et faire disparaitre)"
     # entity_to_update: "Fiche à mettre à jour avec les éléments du doublon"
-    # entity_update: "Modifier la fiche"
     # entries: "Écritures"
     # entries_to_point: "Écritures à pointer"
     error_no_file: "ページ(%{article})はありません。"
@@ -985,8 +976,6 @@ jpn:
     # include_blank: "— Aucune organisation —"
     # income_statement: "Comptes de résultats"
     # incoming_payment_conditions: "Conditions d’encaissement"
-    # incoming_payment_update: "Modifier l’encaissement"
-    # incoming_payment_use_create: "Affecter un encaissement"
     # incoming_payments: "Encaissements"
     incoming_payments_states:
       # all: "Tous"
@@ -1015,15 +1004,12 @@ jpn:
     # journal_entries: "Écritures"
     # journal_entries_states: "États des écritures utilisées"
     # journal_name: "%{name}"
-    # journal_record_update: "Modifier la pièce"
-    # journal_update: "Modifier le journal"
     journal_view:
       # entries: "Écritures"
       # items: "Lignes d’écritures"
       # mixed: "Écritures et lignes"
     # journals: "Journaux"
     # land_parcel_name: "Parcelle"
-    # land_parcel_update: "Modifier la parcelle"
     # land_parcels: "Parcellaire"
     # last_animals: "Dernières naissances"
     # last_clients: "Derniers clients"
@@ -1193,8 +1179,6 @@ jpn:
     # on_account: "À remettre sur le compte"
     # one_condition: "au moins une condition"
     # operation_items: "Intrants et sortants"
-    # operation_update: "Modifier le travail"
-    # operation_use_create: "Ajouter un matériel"
     # operations: "Travaux"
     # order: "Commande"
     # order_amount_with_taxes: "Montant de la commande"
@@ -1205,8 +1189,6 @@ jpn:
     # others_not_assessable_operations: "Autres opérations non imposables"
     # others_services: "Autres biens et services"
     # out_vat_amount: "Base hors taxe"
-    # outgoing_payment_update: "Modifier le décaissement"
-    # outgoing_payment_use_create: "Payer l’achat"
     outgoing_payments_states:
       # all: "Tous"
       # undelivered: "Non délivrés"
@@ -1230,8 +1212,7 @@ jpn:
     # payment_label: "%{number}. %{amount} (%{usable_amount} restants) du %{date} par %{mode} de %{entity}"
     # payment_mode: "Mode d’encaissement"
     # payment_on: "Payé le"
-    # payment_uses: "Décaissements"
-    # payments: "Encaissements"
+    # payments: "Réglements"
     # payments_amount: "Montant réglé"
     # payments_count: "Nombre de %{mode}"
     # payments_number: "Nombre de règlements"
@@ -1270,12 +1251,10 @@ jpn:
     # product: "Produit"
     # product_bar: "Produit par catégories"
     # product_category: "Produits"
-    # product_category_update: "Modifier la catégorie"
     # product_name: "Produit"
     # product_price_listings: "Listes de prix"
     # product_price_templates: "Types de prix"
     product_tabbox: #?
-    # product_update: "Modifier la fiche du produit"
     # production: "Gestion de la production"
     # productions: "Productions"
     productions_states:
@@ -1296,11 +1275,9 @@ jpn:
       # deliveries: "Livraisons"
       # products: "Création de l’achat"
       # summary: "Décaissements"
-    # purchase_update: "Modifier les informations de la commande"
     # purchases: "Achats"
     # purchases_bar: "Achats par type"
     # purchases_expense_bar: "Dépenses par mois"
-    # purchases_price_create: "Ajouter un prix d’achat"
     # quantity: "Quantité"
     # quantity_rest: "Quantité restante"
     # quantity_to_credit: "Qté. à passer en avoir"
@@ -1351,7 +1328,6 @@ jpn:
     # sale: "Vente"
     # sale_cancel: "Faire un avoir sur la facture"
     # sale_deliveries: "Livraisons"
-    # sale_item_create: "Ajouter un produit au devis (Mode complet)"
     # sale_items: "Lignes de la vente"
     sale_steps:
       # deliveries: "Planification des livraisons"
@@ -1359,7 +1335,6 @@ jpn:
       # general: "Description"
       # products: "Produits"
       # summary: "Facture et encaissements"
-    # sale_update: "Modifier les informations du devis"
     # sales: "Ventes"
     # sales_conditions: "Conditions de vente"
     # sales_invoice: "Facture"
@@ -1373,7 +1348,6 @@ jpn:
       # cancelled: "Passées en avoir"
       # credits: "Avoirs"
     # sales_invoices_total: "Total factures"
-    # sales_price_create: "Ajouter un prix de vente"
     sales_states:
       # all: "Toutes"
       # current: "En cours"
@@ -1451,7 +1425,6 @@ jpn:
     # to_deliver: "Livrer"
     # to_deposit: "À encaisser"
     # today: "Aujourd’hui"
-    # tool_update: "Modifier le matériel"
     # tools: "Outils"
     # tools_list: "Liste d’outils"
     # total: "Total"
